# translations-backup

./: .gitignore  README.md  README.template.md  files_by_language.json  metadata-v2.json  metadata.json
.github/: dependabot.yml
.github/workflows/: dry-run.yml  pull-translations.yml  update-files-by-language-json.yml  update-metadata.yml  update-progress-diagram.yml  update-progress.yml
.tx/: config
automation/: pyproject.toml
automation/automation/: files_by_language.py
automation/automation/metadata/: files_by_resource.py
automation/automation/progress/: main.py  read_po_async.py
automation/metadata/: pyproject.toml
automation/metadata/metadata/: files_by_language.py  files_by_resource.py
automation/progress/: README.md  pyproject.toml
automation/progress/progress/: main.py
translations/dfing.github.io/cs/: index.md
translations/dfing.github.io/de/: index.md
translations/dfing.github.io/es/: index.md
translations/dfing.github.io/fr/: index.md
translations/dfing.github.io/it/: index.md
translations/dfing.github.io/lt/: index.md
translations/dfing.github.io/pl/: index.md
translations/dfing.github.io/pt_BR/: index.md
translations/dfing.github.io/ru/: index.md
translations/dfing.github.io/tr/: index.md
translations/dfing.github.io/uk/: index.md
translations/dfing.github.io/vi/: index.md
translations/dwarf-fortress-steam.hardcoded_steam/: bg.po  br.po  cs.po  de.po  eo.po  es.po  fr.po  hu.po  it.po  ja.po  ko.po  lv.po  pt.po  pt_BR.po  ro.po  ru.po  uk.po  yue.po  zh-Hans.po  zh-Hant.po
translations/dwarf-fortress-steam.objects/: be.po  da.po  de.po  el.po  eo.po  es.po  fr.po  hu.po  it.po  ja.po  kk.po  ko.po  kw.po  nl.po  pt_BR.po  ru.po  sl.po  sv.po  tr.po  uk.po  yue.po  zh-Hans.po  zh-Hant.po
translations/dwarf-fortress-steam.text_set/: ach.po  bg.po  br.po  de.po  eo.po  es.po  fr.po  hu.po  it.po  kk.po  ko.po  pl.po  pt_BR.po  ru.po  sl.po  uk.po  zh-Hans.po  zh-Hant.po
translations/dwarf-fortress-steam/hardcoded_steam/: ab.po  ab.po.json  ach.po  ar.po  ar.po.json  be.po  be.po.json  bg.po  bg.po.json  br.po  br.po.json  ca.po  ca.po.json  cs.po  cs.po.json  da.po  da.po.json  de.po  de.po.json  el.po  el.po.json  eo.po  eo.po.json  es.po  es.po.json  eu.po  fi.po  fr.po  fr.po.json  ga.po  gd.po  hu.po  hu.po.json  is.po  is.po.json  it.po  it.po.json  ja.po  ja.po.json  ka.po  (+38 more)
translations/dwarf-fortress-steam/lua/: ab.po  ach.po  ar.po  be.po  bg.po  br.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  eu.po  fi.po  fr.po  ga.po  gd.po  hu.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  kw.po  lt.po  lv.po  nl.po  no.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  th.po  (+7 more)
translations/dwarf-fortress-steam/objects/: ab.po  ach.po  ar.po  ar.po.json  be.po  be.po.json  bg.po  br.po  br.po.json  ca.po  ca.po.json  cs.po  cs.po.json  da.po  de.po  de.po.json  el.po  eo.po  eo.po.json  es.po  es.po.json  eu.po  fi.po  fr.po  fr.po.json  ga.po  gd.po  hu.po  hu.po.json  is.po  it.po  it.po.json  ja.po  ja.po.json  ka.po  kk.po  ko.po  ko.po.json  kw.po  lt.po  (+31 more)
translations/dwarf-fortress-steam/text_set/: ab.po  ach.po  ar.po  ar.po.json  be.po  bg.po  bg.po.json  br.po  br.po.json  ca.po  ca.po.json  cs.po  cs.po.json  da.po  da.po.json  de.po  de.po.json  el.po  eo.po  eo.po.json  es.po  es.po.json  eu.po  fi.po  fr.po  fr.po.json  ga.po  gd.po  hu.po  hu.po.json  is.po  is.po.json  it.po  it.po.json  ja.po  ja.po.json  ka.po  kk.po  ko.po  ko.po.json  (+34 more)
translations/dwarf-fortress.hardcoded/: ach.po  ar.po  be.po  br.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fr.po  hu_HU.po  it.po  ja.po  kk.po  ko_KR.po  kw.po  lv.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  tr.po  uk.po  vi.po  zh-Hant.po  zh.po
translations/dwarf-fortress.hardcoded_steam/: ach.po  ar.po  be.po  bg.po  br.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fr.po  hu.po  it.po  ja.po  kk.po  ko.po  kw.po  lv.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  tr.po  uk.po  vi.po  zh-Hans.po  zh-Hant.po
translations/dwarf-fortress.raw-objects/: ach.po  ar.po  be.po  bg.po  br.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fr.po  hu_HU.po  it.po  ja.po  kk.po  ko_KR.po  kw.po  lv.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  tr.po  uk.po  vi.po  zh-Hant.po  zh.po
translations/dwarf-fortress.speech/: ach.po  ar.po  be.po  br.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fr.po  hu_HU.po  it.po  ja.po  kk.po  ko_KR.po  kw.po  lv.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  tr.po  uk.po  vi.po  zh-Hant.po  zh.po
translations/dwarf-fortress.text/: ach.po  ar.po  be.po  br.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fr.po  hu_HU.po  it.po  ja.po  kk.po  ko_KR.po  kw.po  lv.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  tr.po  uk.po  vi.po  zh-Hant.po  zh.po
translations/dwarf-fortress.uncompressed/: ach.po  ar.po  be.po  br.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fr.po  hu_HU.po  it.po  ja.po  kk.po  ko_KR.po  kw.po  lv.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  tr.po  uk.po  vi.po  zh-Hant.po  zh.po
translations/dwarf-fortress/hardcoded/: ach.po  ach.po.json  ar.po  ar.po.json  be.po  be.po.json  (+52 more)
(+243 files in other folders)
