[tool.poetry]
name = "automation"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
loguru = "^0.7.0"
typer = "^0.9.0"
babel = "^2.12.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry.scripts]
# poetry run progress ../translations/dwarf-fortress-steam ../images/dwarf-fortress-steam.png
progress = "automation.progress.main:app"

# poetry run files_by_resource ../translations ../
files_by_resource = "automation.metadata.files_by_resource:app"
