[tool.poetry]
name = "metadata"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# poetry run files_by_resource ../../translations > ../../metadata.json
files_by_resource = "metadata.files_by_resource:app"
