[tool.poetry]
name = "metadata"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# poetry run files_by_resource ../../translations > ../../
files_by_resource = "metadata.files_by_resource:app"
