[tool.poetry]
name = "progress"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
Jinja2 = "^3.1.2"
loguru = "^0.6.0"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry.scripts]
# poetry run progress ../../ ../../README.template.md ../../README.md
progress = "progress.main:app"
